@@ -1,3 +1,9 @@
+Thu Oct 28 07:53:41 UTC 2010  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * connectors/dds4ccm/tests/SLDisabled/Sender/SL_Disabled_Sender_exec.cpp:
+        * connectors/dds4ccm/tests/SLManyByMany/Sender/SL_ManyByMany_Sender_exec.cpp:
+          Fixed typo
+
 Thu Oct 28 07:09:09 UTC 2010  Marcel Smit  <msmit@remedy.nl>
 
         * NEWS:
